@@ -1,6 +1,7 @@
 /* -*-mode:java; c-basic-offset:2; indent-tabs-mode:nil -*- */
 /*
 Copyright (c) 2015-2016 ymnk, JCraft,Inc. All rights reserved.
+Copyright (c) 2018, D. R. Commander. All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:
@@ -62,7 +63,7 @@ public abstract class DHECN extends KeyExchange{
 
     try{
       Class c=Class.forName(session.getConfig(sha_name));
-      sha=(HASH)(c.newInstance());
+      sha=(HASH)(c.getDeclaredConstructor().newInstance());
       sha.init();
     }
     catch(Exception e){
@@ -77,7 +78,7 @@ public abstract class DHECN extends KeyExchange{
 
     try{
       Class c=Class.forName(session.getConfig("ecdh-sha2-nistp"));
-      ecdh=(ECDH)(c.newInstance());
+      ecdh=(ECDH)(c.getDeclaredConstructor().newInstance());
       ecdh.init(key_size);
 
       Q_C = ecdh.getQ();
