@@ -1,6 +1,7 @@
 /* -*-mode:java; c-basic-offset:2; indent-tabs-mode:nil -*- */
 /*
 Copyright (c) 2015-2016 ymnk, JCraft,Inc. All rights reserved.
+Copyright (c) 2018, D. R. Commander. All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:
@@ -75,7 +76,8 @@ public class KeyPairECDSA extends KeyPair{
     this.key_size=key_size;
     try{
       Class c=Class.forName(JSch.getConfig("keypairgen.ecdsa"));
-      KeyPairGenECDSA keypairgen=(KeyPairGenECDSA)(c.newInstance());
+      KeyPairGenECDSA keypairgen=
+        (KeyPairGenECDSA)(c.getDeclaredConstructor().newInstance());
       keypairgen.init(key_size);
       prv_array=keypairgen.getD();
       r_array=keypairgen.getR();
@@ -285,7 +287,8 @@ public class KeyPairECDSA extends KeyPair{
   public byte[] getSignature(byte[] data){
     try{      
       Class c=Class.forName((String)JSch.getConfig("signature.ecdsa"));
-      SignatureECDSA ecdsa=(SignatureECDSA)(c.newInstance());
+      SignatureECDSA ecdsa=
+        (SignatureECDSA)(c.getDeclaredConstructor().newInstance());
       ecdsa.init();
       ecdsa.setPrvKey(prv_array);
 
@@ -306,7 +309,8 @@ public class KeyPairECDSA extends KeyPair{
   public Signature getVerifier(){
     try{      
       Class c=Class.forName((String)JSch.getConfig("signature.ecdsa"));
-      final SignatureECDSA ecdsa=(SignatureECDSA)(c.newInstance());
+      final SignatureECDSA ecdsa=
+        (SignatureECDSA)(c.getDeclaredConstructor().newInstance());
       ecdsa.init();
 
       if(r_array == null && s_array == null && getPublicKeyBlob()!=null){
