@@ -1,6 +1,7 @@
 /* -*-mode:java; c-basic-offset:2; indent-tabs-mode:nil -*- */
 /*
 Copyright (c) 2006-2016 ymnk, JCraft,Inc. All rights reserved.
+Copyright (c) 2018, D. R. Commander. All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:
@@ -115,7 +116,7 @@ public class UserAuthGSSAPIWithMIC extends UserAuth {
     GSSContext context=null;
     try{
       Class c=Class.forName(session.getConfig(method));
-      context=(GSSContext)(c.newInstance());
+      context=(GSSContext)(c.getDeclaredConstructor().newInstance());
     }
     catch(Exception e){ 
       return false;
